Changed http to https protocol which displayed images properly within recyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FlixsterCodepathTPM</string>
+    <string name="Description">ImageView</string>
 </resources>
